--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -1,10 +1,11 @@
 # Sandbox
-briidgeServerUrl https://sb1-apdemocs-01.securekey.com/otap-client-manager/
-briidgeWidgetUrl sb1-apdemo-01.securekey.com
+connectServer=https://sb1-apdemocs-01.securekey.com/otap-client-manager/
 
 # Keystore
-keystoreFile /keystore/RP_MobileSamples.jks
-keystoreFilePassword password
+keyStoreFile=RP_MobileSamples.jks
+keyStoreFilePassword=password
 
+# client class
+clientClass=com.securekey.connect.clientsdk.SKClient
 
 
